# trunk-cargo-leptos-example

./: Cargo.toml  README.md  Trunk.toml  index.html
src/: counters.rs  lib.rs  main.rs
