[package]
name = "counter-isomorphic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
broadcaster = "1"
console_error_panic_hook = { version = "0.1", optional = true }
futures = "0.3"
lazy_static = "1"
leptos = "0"
leptos_actix = { version = "0", optional = true }
leptos_meta = "0"
leptos_router = "0"
gloo-net = { version = "0.5", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"] }
cfg-if = "1"

[features]
default = ["ssr"]
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "dep:wasm-bindgen",
  "dep:console_error_panic_hook",
  "dep:gloo-net",
]
ssr = [
  "dep:actix-files",
  "dep:actix-web",
  "leptos/ssr",
  "leptos_actix",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]
csr = [
  "leptos/csr",
  "leptos_meta/csr",
  "leptos_router/csr",
  "dep:wasm-bindgen",
  "dep:console_error_panic_hook",
  "dep:gloo-net",
]

[package.metadata.cargo-all-features]
denylist = ["actix-files", "actix-web", "leptos_actix"]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]

[package.metadata.leptos]
output-name = "counter-isomorphic"
env = "DEV"
watch = false
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
browserquery = "defaults"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
site-addr = "0.0.0.0:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"